--- a/Tests/Cats.Tests/packages.config
+++ b/Tests/Cats.Tests/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
   <package id="NUnit" version="2.6.2" targetFramework="net45" />
 </packages>
