Package issue has been solved.

--- a/Tests/Cats.Data.Tests/Cats.Data.Tests.csproj
+++ b/Tests/Cats.Data.Tests/Cats.Data.Tests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="ServicesTest\Procurement\TransportOrderServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
