--- a/Infrastructure/Helpers.Localization/packages.config
+++ b/Infrastructure/Helpers.Localization/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
 </packages>
