--- a/Tests/Cats.Security.Tests/Cats.Security.Tests.csproj
+++ b/Tests/Cats.Security.Tests/Cats.Security.Tests.csproj
@@ -78,7 +78,9 @@
     <Compile Include="UserAccountControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <Content Include="app.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
