--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -215,6 +215,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Areas\EarlyWarning\Controllers\ContributionController.cs" />
+    <Compile Include="Areas\EarlyWarning\Models\ReasonViewModel.cs" />
     <Compile Include="Areas\Finance\Controllers\ChequeController.cs" />
     <Compile Include="Areas\Finance\Models\TransporterPaymentRequestViewModel.cs" />
     <Compile Include="Areas\Hub\Controllers\AdminUnitController.cs" />
@@ -3777,6 +3778,7 @@
     <Folder Include="Content\assetss\global\plugins\jqvmap\jqvmap\data\" />
     <Folder Include="Content\assetss\global\plugins\jqvmap\jqvmap\maps\" />
     <Folder Include="Content\assetss\global\plugins\jstree\dist\themes\" />
+    <Folder Include="Content\Attachment\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
