fixed a circular reference error on requisition index page kendo grid

--- a/Models/Cats.Models/Cats.Models.csproj
+++ b/Models/Cats.Models/Cats.Models.csproj
@@ -139,6 +139,7 @@
     <Compile Include="ViewModels\DistributionByAgeViewModel.cs" />
     <Compile Include="DistibtionStatus.cs" />
     <Compile Include="ViewModels\DashboardDispAlloRequisition.cs" />
+    <Compile Include="ViewModels\FlowTemplateViewModel.cs" />
     <Compile Include="VWRegionalRequest.cs" />
     <Compile Include="WoredaStockDistributionDetail.cs" />
     <Compile Include="Delivery.cs" />
