--- a/.gitignore
+++ b/.gitignore
@@ -131,13 +131,13 @@ Web/Web.config
 *.docx
 *.datasource
 *.config
-Web/Areas/EarlyWarning/Views/Request/Allocation.cshtml.rej
-<<<<<<< HEAD
+
 
 bin
 obj
 
+src/*/bin/*
+src/*/obj/*
 .vs
 =======
-/packages
->>>>>>> e586ffe406b724539a00bb323f7dcbf66255c1b0
+
