--- a/Data/Cats.Data/Cats.Data.csproj
+++ b/Data/Cats.Data/Cats.Data.csproj
@@ -73,6 +73,15 @@
   <ItemGroup>
     <Compile Include="CatsContext.cs" />
     <Compile Include="JsonHelper.cs" />
+    <Compile Include="Migrations\201607032005409_InitialCreate.cs" />
+    <Compile Include="Migrations\201607032005409_InitialCreate.Designer.cs">
+      <DependentUpon>201607032005409_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607032105581_RemoveAdminUnitNameAm.cs" />
+    <Compile Include="Migrations\201607032105581_RemoveAdminUnitNameAm.Designer.cs">
+      <DependentUpon>201607032105581_RemoveAdminUnitNameAm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\GenericRepository.cs" />
     <Compile Include="Repository\IGenericRepository.cs" />
@@ -90,6 +99,14 @@
       <Project>{abfb63d2-89fc-45bc-aa4e-5d9b21094b85}</Project>
       <Name>Cats.Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201607032005409_InitialCreate.resx">
+      <DependentUpon>201607032005409_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607032105581_RemoveAdminUnitNameAm.resx">
+      <DependentUpon>201607032105581_RemoveAdminUnitNameAm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
