H.1.3.2 CATS-1250 CATS-1212 Add new commodities was not available - now it is fixed

--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -738,6 +738,8 @@
     <Content Include="Areas\EarlyWarning\Views\HRD\OldHRD.cshtml" />
     <Content Include="Areas\EarlyWarning\Views\GiftCertificate\_Reject.cshtml" />
     <Content Include="Areas\EarlyWarning\Views\GiftCertificate\_NotReject.cshtml" />
+    <Content Include="Areas\Hub\Views\ReceiveNew\Code" />
+    <Content Include="Areas\Hub\Views\ReceiveNew\Commodities.cshtml" />
     <None Include="Areas\Logistics\Views\DispatchAllocation\_AllocateProjectCode.cshtml" />
     <Content Include="Content\2013.1.219\Black\editor.png" />
     <Content Include="Content\2013.1.219\Black\imagebrowser.png" />
