Web config database connection modified.

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -92,10 +92,10 @@
 
 
   <connectionStrings>
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
 
@@ -125,7 +125,7 @@
     <add key="elmah.mvc.route" value="elmah" />
     <add key="CatsReportUserName" value="Administrator" />
     <add key="CatsReportPassword" value="P@ssw0rd" />
-    <add key="CatsReportServerURL" value="http://10.24.65.52/ReportServer" />
+    <add key="CatsReportServerURL" value="http://10.24.65.251/Reports" />
     <add key="aspnet:AllowAnonymousImpersonation" value="true"/>
     
   
