H.1.0 OptimizeHubReceive Receive index took forever to load as the current implementation used multiple nested forloops to calculate the aggregated amount of received for each receive allocation which made it took more than 5 minutes. This was solved by taking the aggregation process to the database level. And it now takes less than a second to load.

--- a/Services/Cats.Services.Hub/Cats.Services.Hub.csproj
+++ b/Services/Cats.Services.Hub/Cats.Services.Hub.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Interfaces\IUserHubService.cs" />
     <Compile Include="Interfaces\IUserProfileService.cs" />
     <Compile Include="Interfaces\IUserRoleService.cs" />
+    <Compile Include="IVWReceiptAllocationAggregateService.cs" />
     <Compile Include="LedgerService.cs" />
     <Compile Include="LedgerTypeService.cs" />
     <Compile Include="LetterTemplateService.cs" />
@@ -170,6 +171,7 @@
     <Compile Include="UserHubService.cs" />
     <Compile Include="UserProfileService.cs" />
     <Compile Include="UserRoleService.cs" />
+    <Compile Include="VWReceiptAllocationAggregateService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
