--- a/Models/Cats.Models.Hub/Cats.Models.Hub.csproj
+++ b/Models/Cats.Models.Hub/Cats.Models.Hub.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Contact.cs" />
     <Compile Include="FreeStockStatus.cs" />
     <Compile Include="Mapping\VWFreePhysicalStockMap.cs" />
+    <Compile Include="Mapping\VWReceiptAllocationAggregateMap.cs" />
     <Compile Include="StockAdjustmentViewModel.cs" />
     <Compile Include="SummaryFreeAndPhysicalStockModel.cs" />
     <Compile Include="Mapping\VWTransferredStockMap.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="ViewModels\ReceiveDetailNewViewModel.cs" />
     <Compile Include="ViewModels\ReceiveNewViewModel.cs" />
     <Compile Include="ViewModels\ReceiveViewModelDto.cs" />
+    <Compile Include="VWReceiptAllocationAggregate.cs" />
     <Compile Include="VWTransferredStock.cs" />
     <Compile Include="VWCarryOver.cs" />
     <Compile Include="Detail.cs" />
