H.1.0 Git ignored applicationhost.config in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ Web/Templates/e366506e-26a9-4672-9011-7e59a34a7cff.docx
 Models/Cats.Models/MailingList.cs
 Web/Web.config
 
+/.vs/config/applicationhost.config
