--- a/Models/Cats.Models.Hub/Cats.Models.Hub.csproj
+++ b/Models/Cats.Models.Hub/Cats.Models.Hub.csproj
@@ -97,6 +97,7 @@
     </Compile>
     <Compile Include="Contact.cs" />
     <Compile Include="FreeStockStatus.cs" />
+    <Compile Include="Mapping\VWDispatchAllocationMap.cs" />
     <Compile Include="Mapping\VWFreePhysicalStockMap.cs" />
     <Compile Include="Mapping\VWReceiptAllocationAggregateMap.cs" />
     <Compile Include="StockAdjustmentViewModel.cs" />
@@ -109,6 +110,7 @@
     <Compile Include="ViewModels\ReceiveDetailNewViewModel.cs" />
     <Compile Include="ViewModels\ReceiveNewViewModel.cs" />
     <Compile Include="ViewModels\ReceiveViewModelDto.cs" />
+    <Compile Include="VWDispatchAllocation.cs" />
     <Compile Include="VWReceiptAllocationAggregate.cs" />
     <Compile Include="VWTransferredStock.cs" />
     <Compile Include="VWCarryOver.cs" />
