--- a/Web/Web.config
+++ b/Web/Web.config
@@ -93,10 +93,10 @@
 
   <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsMaster2;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsMaster2;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source = .;Initial Catalog=CatsMaster2;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsMaster2;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsMaster;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsMaster;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source =niguspc\sqlserver;Initial Catalog=CatsMaster;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsMaster;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
 
