--- a/Web/Web.config
+++ b/Web/Web.config
@@ -91,13 +91,12 @@
 
 
 
-  <connectionStrings>
+ <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsMaster;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsMaster;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source =niguspc\sqlserver;Initial Catalog=CatsMaster;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsMaster;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-
+    <add name="elmah-sql" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=niguspc\sqlserver;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!--<connectionStrings>
