--- a/Web/Web.config
+++ b/Web/Web.config
@@ -93,10 +93,10 @@
 
  <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=.\mssql12;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.\mssql12;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.\mssql12;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.\mssql12;Initial Catalog=CatsMaster;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
 
