--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -3485,6 +3485,8 @@
     <Content Include="Views\Shared\EditorTemplates\GuidTemplate.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\CommodityEditor.cshtml" />
     <Content Include="Views\Shared\_AdminUnitTreeForAllocation.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\WoredaStockDistrAmhDPEnd.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\WoredaStockDistrAmhDPStart.cshtml" />
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
