--- a/Web/Web.config
+++ b/Web/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -82,7 +82,7 @@
       <parameter>
         <parameterName value="@exception" />
         <dbType value="String" />
-        <size value="2000"/>
+        <size value="2000" />
         <layout type="log4net.Layout.ExceptionLayout" />
       </parameter>
     </appender>
@@ -124,14 +124,14 @@
     <add key="CatsReportUserName" value="Administrator" />
     <add key="CatsReportPassword" value="P@ssw0rd" />
     <add key="CatsReportServerURL" value="http://10.24.65.251/Reports" />
-    <add key="aspnet:AllowAnonymousImpersonation" value="true"/>
+    <add key="aspnet:AllowAnonymousImpersonation" value="true" />
     
   
     <!--<add key="CatsReportServerURL" value="$http://./reportserver" />-->
 
   </appSettings>
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
     <!--<roleManager defaultProvider="NetSqlAzManRoleProvider" enabled="true" cacheRolesInCookie="false" cookieName=".ASPROLES" cookieTimeout="30" cookiePath="/" cookieRequireSSL="false" cookieSlidingExpiration="true" cookieProtection="All">
       <providers>
         <clear/>
@@ -186,17 +186,7 @@
     </compilation>
     <authentication mode="Forms">
       <!--<forms loginUrl="~/Login" timeout="30" name="Authen" />-->
-      <forms
-         name="Authen"
-         loginUrl="~/Login"
-         defaultUrl="default.aspx"
-         protection="All"
-         timeout="2880"
-         path="/"
-         requireSSL="false"
-         slidingExpiration="true"
-         cookieless="UseDeviceProfile" domain=""
-         enableCrossAppRedirects="false">
+      <forms name="Authen" loginUrl="~/Login" defaultUrl="default.aspx" protection="All" timeout="2880" path="/" requireSSL="false" slidingExpiration="true" cookieless="UseDeviceProfile" domain="" enableCrossAppRedirects="false">
         <!--<credentials passwordFormat="SHA1" />-->
       </forms>
     </authentication>
