--- a/Tests/Cats.Tests/packages.config
+++ b/Tests/Cats.Tests/packages.config
@@ -3,5 +3,6 @@
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
+    <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.2" targetFramework="net45" />
 </packages>
