CATS-1314: workflow implementation - minor change - when a given certificate is rejected it now will go to rejected state rather than to draft

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -90,10 +90,10 @@
 
   <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=.\mssql12;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.\mssql12;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.\mssql12;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.\mssql12;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
 
