--- a/Cats.Web.Adminstration/Web.config
+++ b/Cats.Web.Adminstration/Web.config
@@ -12,12 +12,15 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
   </configSections>
-  
+
+
   <connectionStrings>
-    <add name="elmah-sql" connectionString="Data Source=EDGE-YONAS;Initial Catalog=CatsMaster; User=catsDev;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=EDGE-YONAS;Initial Catalog=CatsMaster;User=catsDev;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=EDGE-YONAS;Initial Catalog=CatsMaster;User=catsDev;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=EDGE-YONAS;Initial Catalog=CatsMaster;User=catsDev;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+
+    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   
   <!--<connectionStrings>
