--- a/Web/Web.config
+++ b/Web/Web.config
@@ -90,20 +90,12 @@
 
   <connectionStrings>
 
-    <add name="elmah-sql" connectionString="Data Source=.\mssql12;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.\mssql12;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.\mssql12;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.\mssql12;Initial Catalog=CatsDrmfss;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=CatsDRMFSS;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
-
-<!--<connectionStrings>
-    <add name="elmah-sql" connectionString="Data Source=10.24.65.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=10.24.65.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=10.24.65.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=10.24.65.251;Initial Catalog=CatsMaster;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
-
 
   <appSettings>
     <add key="log4net.Internal.Debug" value="true" />
@@ -120,7 +112,7 @@
     <add key="elmah.mvc.route" value="elmah" />
     <add key="CatsReportUserName" value="Administrator" />
     <add key="CatsReportPassword" value="P@ssw0rd" />
-    <add key="CatsReportServerURL" value="http://10.24.65.251/Reports" />
+    <add key="CatsReportServerURL" value="http://192.168.10.251/Reports" />
     <add key="aspnet:AllowAnonymousImpersonation" value="true" />
     
   
