Conversion of Hardcoded settings to a setting file

--- a/Services/Cats.Services.Common/App.config
+++ b/Services/Cats.Services.Common/App.config
@@ -1,2 +1,72 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration />
+<configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Cats.Services.Common.ApplicationSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
+    <applicationSettings>
+        <Cats.Services.Common.ApplicationSettings>
+            <setting name="PSNPWorkflow" serializeAs="String">
+                <value>PSNPWorkflow</value>
+            </setting>
+            <setting name="PaymentRequestWorkflow" serializeAs="String">
+                <value>PaymentRequestWorkflow</value>
+            </setting>
+            <setting name="TransporterChequeWorkflow" serializeAs="String">
+                <value>TransporterChequeWorkflow</value>
+            </setting>
+            <setting name="TransporterPaymentRequestWorkflow" serializeAs="String">
+                <value>TransporterPaymentRequestWorkflow</value>
+            </setting>
+            <setting name="DefaultRation" serializeAs="String">
+                <value>DefaultRation</value>
+            </setting>
+            <setting name="HRDWorkflow" serializeAs="String">
+                <value>HRDWorkflow</value>
+            </setting>
+            <setting name="ReliefRequisitionWorkflow" serializeAs="String">
+                <value>ReliefRequisitionWorkflow</value>
+            </setting>
+            <setting name="LocalPurchaseReceiptPlanWorkflow" serializeAs="String">
+                <value>LocalPurchaseReceiptPlanWorkflow</value>
+            </setting>
+            <setting name="SwapWorkflow" serializeAs="String">
+                <value>SwapWorkflow</value>
+            </setting>
+            <setting name="RegionalRequestWorkflow" serializeAs="String">
+                <value>RegionalRequestWorkflow</value>
+            </setting>
+            <setting name="TransportOrderWorkflow" serializeAs="String">
+                <value>TransportOrderWorkflow</value>
+            </setting>
+            <setting name="ReciptPlanForLoanWorkflow" serializeAs="String">
+                <value>ReciptPlanForLoanWorkflow</value>
+            </setting>
+            <setting name="BidPlanWorkflow" serializeAs="String">
+                <value>BidPlanWorkflow</value>
+            </setting>
+            <setting name="BidWinnerWorkflow" serializeAs="String">
+                <value>BidWinnerWorkflow</value>
+            </setting>
+            <setting name="NeedAssessmentPlanWorkflow" serializeAs="String">
+                <value>NeedAssessmentPlanWorkflow</value>
+            </setting>
+            <setting name="NeedAssessmentWorkflow" serializeAs="String">
+                <value>NeedAssessmentWorkflow</value>
+            </setting>
+            <setting name="TransportRequisitionWorkflow" serializeAs="String">
+                <value>TransportRequisitionWorkflow</value>
+            </setting>
+            <setting name="DonationPlanHeaderWorkflow" serializeAs="String">
+                <value>DonationPlanHeaderWorkflow</value>
+            </setting>
+            <setting name="GiftCertificateWorkflow" serializeAs="String">
+                <value>GiftCertificateWorkflow</value>
+            </setting>
+            <setting name="TranferReceiptPlanWorkflow" serializeAs="String">
+                <value>TranferReceiptPlanWorkflow</value>
+            </setting>
+        </Cats.Services.Common.ApplicationSettings>
+    </applicationSettings>
+</configuration>
