--- a/Web/Web.config
+++ b/Web/Web.config
@@ -162,13 +162,11 @@
       <add verb="GET,HEAD" path="asset.axd" validate="false" type="Telerik.Web.Mvc.WebAssetHttpHandler, Telerik.Web.Mvc" />
     </httpHandlers>
     <httpRuntime targetFramework="4.5" />
-    <compilation targetFramework="4.5" debug="true">
+    <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
         <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
         <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
-        <!-- <add assembly="Telerik.ReportViewer.WebForms, Version=7.0.13.228, Culture=neutral, PublicKeyToken=A9D7983DFCC261BE"/>
-        <add assembly="Telerik.Reporting, Version=7.0.13.228, Culture=neutral, PublicKeyToken=A9D7983DFCC261BE"/> -->
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
       </assemblies>
       <buildProviders>
