CATS-1298 :Update Hub UI: Starting Balance page to be consistent with other modules

--- a/Web/Cats.csproj
+++ b/Web/Cats.csproj
@@ -3498,6 +3498,7 @@
     <Content Include="Web References\ReportPortal\CacheRefreshPlan6.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </Content>
+    <Content Include="Views\Shared\DefaultLayout.cshtml" />
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
