Workflow definition has been modified.

--- a/Services/Cats.Services.Common/App.config
+++ b/Services/Cats.Services.Common/App.config
@@ -70,6 +70,9 @@
             <setting name="BidPlanDetailActionWorkflow" serializeAs="String">
                 <value>BidPlanDetailActionWorkflow</value>
             </setting>
+            <setting name="GlobalWorkflow" serializeAs="String">
+                <value>GlobalWorkflow</value>
+            </setting>
         </Cats.Services.Common.ApplicationSettings>
     </applicationSettings>
 </configuration>
