--- a/Services/Cats.Services.Common/ApplicationSettings.settings
+++ b/Services/Cats.Services.Common/ApplicationSettings.settings
@@ -65,5 +65,8 @@
     <Setting Name="BidPlanDetailActionWorkflow" Type="System.String" Scope="Application">
       <Value Profile="(Default)">BidPlanDetailActionWorkflow</Value>
     </Setting>
+    <Setting Name="GlobalWorkflow" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">GlobalWorkflow</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
