Build fixed for the workflow implementation.

--- a/Models/Cats.Models.Hub/Cats.Models.Hub.csproj
+++ b/Models/Cats.Models.Hub/Cats.Models.Hub.csproj
@@ -97,6 +97,7 @@
     </Compile>
     <Compile Include="Contact.cs" />
     <Compile Include="FreeStockStatus.cs" />
+    <Compile Include="IWorkflow.cs" />
     <Compile Include="Mapping\VWDispatchAllocationMap.cs" />
     <Compile Include="Mapping\VWFreePhysicalStockMap.cs" />
     <Compile Include="Mapping\VWReceiptAllocationAggregateMap.cs" />
