CATS-1390 : Added workflow Impl (Data entry Indicator) for dispatch

--- a/Services/Cats.Services.Common/App.config
+++ b/Services/Cats.Services.Common/App.config
@@ -76,6 +76,9 @@
             <setting name="GlobalWorkflow" serializeAs="String">
                 <value>GlobalWorkflow</value>
             </setting>
+            <setting name="DispatchWorkflow" serializeAs="String">
+                <value>DispatchWorkflow</value>
+            </setting>
         </Cats.Services.Common.ApplicationSettings>
     </applicationSettings>
 </configuration>
