--- a/Services/Cats.Services.Common/ApplicationSettings.settings
+++ b/Services/Cats.Services.Common/ApplicationSettings.settings
@@ -71,5 +71,8 @@
     <Setting Name="GlobalWorkflow" Type="System.String" Scope="Application">
       <Value Profile="(Default)">GlobalWorkflow</Value>
     </Setting>
+    <Setting Name="DispatchWorkflow" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">DispatchWorkflow</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
